# pmsm_ml_angle_estimator

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: code_quality.yml
notebooks/: 01_eda.ipynb  02_machine_learning.ipynb
scripts/: __init__.py  run_pmsm_sim.py
src/: __init__.py  foc_controller.py  pid_controller.py  pmsm_plant.py  pmsm_plotter.py  pmsm_simulator.py  profile_generators.py  ramp_gen.py  run_pmsm_sim.py  sensors.py  speed_controller.py  transform.py
src/notebooks/: 01_eda.ipynb
src/simulation/: foc_controller.py  pidController.py  pmsm_plant.py  pmsm_plotter.py  pmsm_simulator.py  ramp_gen.py  run_pmsm_sim.py  sensor_noise.py  sensors.py  speed_controller.py  transform.py
tests/: __init__.py  foc_controller_test.py  pid_controller_test.py  pmsm_plant_test.py  pmsm_simulator_test.py  profile_generatoors_test.py  ramp_gen_test.py  sensors_test.py  speed_controller_test.py  transform_test.py
